@@ -204,6 +204,84 @@ class Test_regressiontest_Tester(unittest.TestCase):
         self.assertRaises(ValueError,
                           rt.setLibraryRoot, "this_is_not_the_root_dir_of_a_library")
 
+    def test_set_data_attributes_from_mos(self):
+        import buildingspy.development.regressiontest as r
+
+        content = """
+        simulateModel("MyModel.Name");
+        """
+        data, err = r.Tester._set_data_attributes_from_mos(mos_content=content)
+        expected_result = {'dymola':
+                           {'exportFMU': False,
+                            'translate': True,
+                            'simulate': True,
+                            'TranslationLogFile': 'MyModel.Name.translation.log'},
+                           'model_name': 'MyModel.Name',
+                           'startTime': 0,
+                           'stopTime': 1}
+        self.assertIsNone(err, f"Received unexpected error: {err}")
+        self.assertDictEqual(data, expected_result, "Failed to parse model name.")
+
+        # Test parsing with line breaks and spaces
+        for content in [
+            """simulateModel("MyModel.Name")
+        """,
+            """
+        simulateModel(
+            "MyModel.Name");
+        """,
+            """
+        simulateModel( "MyModel.Name" );
+        """
+        ]:
+            data, err = r.Tester._set_data_attributes_from_mos(mos_content=content)
+            self.assertEqual(data, {**data, **{"model_name": "MyModel.Name"}},
+                             f"Failed to parse line ending in content='{content}'.")
+
+        # Test parsing of time
+        for content in [
+            """simulateModel("MyModel.Name",
+          startTime=1)""",
+            """simulateModel("MyModel.Name", startTime=1)""",
+            """simulateModel("MyModel.Name",startTime=1)""",
+            """simulateModel("MyModel.Name", startTime = 1)""",
+            """simulateModel("MyModel.Name", startTime = 1 )""",
+            """simulateModel("MyModel.Name", startTime=+1)""",
+            """simulateModel("MyModel.Name", startTime=1e0)""",
+            """simulateModel("MyModel.Name", startTime=1e+0)""",
+            """simulateModel("MyModel.Name", startTime=1.00e+00)""",
+            """simulateModel("MyModel.Name", startTime=1.00e-00)""",
+            """simulateModel("MyModel.Name",
+          startTime=1e+0)"""
+        ]:
+            data, err = r.Tester._set_data_attributes_from_mos(mos_content=content)
+            self.assertEqual(data, {**data, **{"startTime": 1}},
+                             f"Failed to parse startTime in content='{content}'.")
+
+        content = """
+            translateModelFMU(
+                modelToOpen="MyModelicaLibrary.Examples.MyModel",
+                storeResult=false,
+                modelName="",
+                fmiVersion="2",
+                fmiType="me",
+                includeSource=false);
+                 """
+        data, err = r.Tester._set_data_attributes_from_mos(mos_content=content)
+
+        expected_result = {
+            'dymola': {
+                'translate': False,
+                'simulate': False,
+                'exportFMU': True,
+                'modelToOpen': 'MyModelicaLibrary.Examples.MyModel',
+                'modelName': 'MyModelicaLibrary.Examples.MyModel'
+            }
+        }
+
+        self.assertIsNone(err, f"Received unexpected error: {err}")
+        self.assertDictEqual(data, expected_result, "Failed to parse model name.")
+
     def test_setDataDictionary(self):
         import buildingspy.development.regressiontest as r
         rt = r.Tester(check_html=False)
