@@ -10,12 +10,12 @@ buildingspy
 package that can be used to:
 
  - Run Modelica simulations using
-   `OPTIMICA <https://modelon.com/modelon-impact/modelon-creator-suite/optimica-compiler-toolkit/>`_
+   `OPTIMICA <https://help.modelon.com/latest/reference/oct/>`_
    or
    `Dymola <https://www.3ds.com/products-services/catia/products/dymola>`_.
  - Process ``*.mat`` output files that were generated by
    OPTIMICA, Dymola or
-   `OpenModelica <https://www.openmodelica.org/>`_.
+   `OpenModelica <https://openmodelica.org/>`_.
  - Run unit tests as part of the library development.
  - Refactor Modelica libraries.
  - Merge the `IBPSA <https://github.com/ibpsa/modelica-ibpsa>`_ library to other
@@ -26,7 +26,7 @@ to extract data series from the output file for
 further use in the python packages
 `matplotlib <https://matplotlib.org/>`_
 for plotting and
-`SciPy <https://www.scipy.org/>`_ for scientific computing.
+`SciPy <https://scipy.org/>`_ for scientific computing.
 
 Contents:
 
